# ticket-pricing-signal

./: .gitignore  README.md  app.py  pyproject.toml
src/ticketsignal/: __init__.py  backtest.py  cli.py  data.py  features.py  model.py  ticketmaster.py
tests/: test_ticketsignal.py
