[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ticketsignal"
version = "0.1.0"
description = "Leakage-safe fair-value pricing signal for the secondary ticket market (proof of concept)"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "scikit-learn",
    "requests",
]

[project.optional-dependencies]
app = ["streamlit", "plotly"]

[tool.setuptools.packages.find]
where = ["src"]
